deployment/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-agent-deployment
  namespace: ai-agent
spec:
  replicas: 1 # Możesz zwiększyć liczbę replik dla skalowalności.
  selector:
    matchLabels:
      app: ai-agent
  template:
    metadata:
      labels:
        app: ai-agent
    spec:
      containers:
      - name: ai-agent-container
        image: aiagent-api:latest
        ports:
        - containerPort: 80 # Port, na którym nasłuchuje Twoja aplikacja w kontenerze.
        volumeMounts:
        - name: gcp-key-volume
          mountPath: /var/secrets/google
          readOnly: true
      volumes:
      - name: gcp-key-volume
        secret:
          secretName: gcp-key
